--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,24 +127,24 @@ orbs:
 workflows:
   default:
     jobs:
-      # - Lint
-      # - image-build-push:
-      #     requires: [Lint]
-      # - create-cluster:
-      #     cluster-name: udacity-capstone
-      #     #creating and deploying cluster should be triggered via master branch only.
-      #     filters:
-      #       branches:
-      #         only: [master]
+      - Lint
+      - image-build-push:
+          requires: [Lint]
+      - create-cluster:
+          cluster-name: udacity-capstone
+          #creating and deploying cluster should be triggered via master branch only.
+          filters:
+            branches:
+              only: [master]
       - deploy-to-cluster:
           cluster-name: udacity-capstone
-      #     requires: [create-cluster]
+          requires: [create-cluster]
       - aws-eks/update-container-image:
           cluster-name: udacity-capstone
           container-image-updates: capstone=arch09/capstone
           record: true
-          #requires: [deploy-to-cluster]
+          requires: [deploy-to-cluster]
           resource-name: deployment/capstone
       - check-cluster:
           cluster-name: udacity-capstone
-          #requires: [aws-eks/update-container-image]
+          requires: [aws-eks/update-container-image]
